Crréation base de données

--- a/.env.dev
+++ b/.env.dev
@@ -2,3 +2,4 @@
 ###> symfony/framework-bundle ###
 APP_SECRET=61e4929cfbb57a610e3bb2c70f21b15c
 ###< symfony/framework-bundle ###
+DATABASE_URL="mysql://root@127.0.0.1:3306/SORTIES_DB?serverVersion=8.0.32&charset=utf8mb4"
