--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,6 +19,9 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            remember_me:
+                secret : '%kernel.secret%'
+                lifetime : 300
             form_login:
                 login_path: app_login
                 check_path: app_login
