--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,11 +36,15 @@ security:
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
+    security:
+        role_hierarchy:
+            ROLE_ORGANISATEUR: [ ROLE_USER ]
+            ROLE_ADMIN: [ ROLE_USER ]
 
-    # Note: Only the *first* matching rule is applied
-    access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        access_control:
+            - { path: ^/admin, roles: ROLE_ADMIN }
+#            - { path: ^/organisateur, roles: ROLE_ORGANISATEUR }
+
 
 when@test:
     security:
