--- a/.env.dev
+++ b/.env.dev
@@ -3,3 +3,4 @@
 APP_SECRET=61e4929cfbb57a610e3bb2c70f21b15c
 ###< symfony/framework-bundle ###
 DATABASE_URL="mysql://root@127.0.0.1:3306/SORTIES_DB?serverVersion=8.0.32&charset=utf8mb4"
+MAILER_DSN=smtp://127.0.0.1:1025
