--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,213 @@
 /assets/vendor/
 ###< symfony/asset-mapper ###
 /.idea/
+/node_modules/bootswatch/README.md
+/node_modules/.package-lock.json
+/node_modules/bootswatch/dist/brite/_bootswatch.scss
+/node_modules/bootswatch/dist/cerulean/_bootswatch.scss
+/node_modules/bootswatch/dist/cosmo/_bootswatch.scss
+/node_modules/bootswatch/dist/cyborg/_bootswatch.scss
+/node_modules/bootswatch/dist/darkly/_bootswatch.scss
+/node_modules/bootswatch/dist/flatly/_bootswatch.scss
+/node_modules/bootswatch/dist/journal/_bootswatch.scss
+/node_modules/bootswatch/dist/litera/_bootswatch.scss
+/node_modules/bootswatch/dist/lumen/_bootswatch.scss
+/node_modules/bootswatch/dist/lux/_bootswatch.scss
+/node_modules/bootswatch/dist/materia/_bootswatch.scss
+/node_modules/bootswatch/dist/minty/_bootswatch.scss
+/node_modules/bootswatch/dist/morph/_bootswatch.scss
+/node_modules/bootswatch/dist/pulse/_bootswatch.scss
+/node_modules/bootswatch/dist/quartz/_bootswatch.scss
+/node_modules/bootswatch/dist/sandstone/_bootswatch.scss
+/node_modules/bootswatch/dist/simplex/_bootswatch.scss
+/node_modules/bootswatch/dist/sketchy/_bootswatch.scss
+/node_modules/bootswatch/dist/slate/_bootswatch.scss
+/node_modules/bootswatch/dist/solar/_bootswatch.scss
+/node_modules/bootswatch/dist/spacelab/_bootswatch.scss
+/node_modules/bootswatch/dist/superhero/_bootswatch.scss
+/node_modules/bootswatch/dist/united/_bootswatch.scss
+/node_modules/bootswatch/dist/vapor/_bootswatch.scss
+/node_modules/bootswatch/dist/yeti/_bootswatch.scss
+/node_modules/bootswatch/dist/zephyr/_bootswatch.scss
+/node_modules/bootswatch/dist/brite/_variables.scss
+/node_modules/bootswatch/dist/cerulean/_variables.scss
+/node_modules/bootswatch/dist/cosmo/_variables.scss
+/node_modules/bootswatch/dist/cyborg/_variables.scss
+/node_modules/bootswatch/dist/darkly/_variables.scss
+/node_modules/bootswatch/dist/flatly/_variables.scss
+/node_modules/bootswatch/dist/journal/_variables.scss
+/node_modules/bootswatch/dist/litera/_variables.scss
+/node_modules/bootswatch/dist/lumen/_variables.scss
+/node_modules/bootswatch/dist/lux/_variables.scss
+/node_modules/bootswatch/dist/materia/_variables.scss
+/node_modules/bootswatch/dist/minty/_variables.scss
+/node_modules/bootswatch/dist/morph/_variables.scss
+/node_modules/bootswatch/dist/pulse/_variables.scss
+/node_modules/bootswatch/dist/quartz/_variables.scss
+/node_modules/bootswatch/dist/sandstone/_variables.scss
+/node_modules/bootswatch/dist/simplex/_variables.scss
+/node_modules/bootswatch/dist/sketchy/_variables.scss
+/node_modules/bootswatch/dist/slate/_variables.scss
+/node_modules/bootswatch/dist/solar/_variables.scss
+/node_modules/bootswatch/dist/spacelab/_variables.scss
+/node_modules/bootswatch/dist/superhero/_variables.scss
+/node_modules/bootswatch/dist/united/_variables.scss
+/node_modules/bootswatch/dist/vapor/_variables.scss
+/node_modules/bootswatch/dist/yeti/_variables.scss
+/node_modules/bootswatch/dist/zephyr/_variables.scss
+/node_modules/bootswatch/dist/brite/bootstrap.css
+/node_modules/bootswatch/dist/cerulean/bootstrap.css
+/node_modules/bootswatch/dist/cosmo/bootstrap.css
+/node_modules/bootswatch/dist/cyborg/bootstrap.css
+/node_modules/bootswatch/dist/darkly/bootstrap.css
+/node_modules/bootswatch/dist/flatly/bootstrap.css
+/node_modules/bootswatch/dist/journal/bootstrap.css
+/node_modules/bootswatch/dist/litera/bootstrap.css
+/node_modules/bootswatch/dist/lumen/bootstrap.css
+/node_modules/bootswatch/dist/lux/bootstrap.css
+/node_modules/bootswatch/dist/materia/bootstrap.css
+/node_modules/bootswatch/dist/minty/bootstrap.css
+/node_modules/bootswatch/dist/morph/bootstrap.css
+/node_modules/bootswatch/dist/pulse/bootstrap.css
+/node_modules/bootswatch/dist/quartz/bootstrap.css
+/node_modules/bootswatch/dist/sandstone/bootstrap.css
+/node_modules/bootswatch/dist/simplex/bootstrap.css
+/node_modules/bootswatch/dist/sketchy/bootstrap.css
+/node_modules/bootswatch/dist/slate/bootstrap.css
+/node_modules/bootswatch/dist/solar/bootstrap.css
+/node_modules/bootswatch/dist/spacelab/bootstrap.css
+/node_modules/bootswatch/dist/superhero/bootstrap.css
+/node_modules/bootswatch/dist/united/bootstrap.css
+/node_modules/bootswatch/dist/vapor/bootstrap.css
+/node_modules/bootswatch/dist/yeti/bootstrap.css
+/node_modules/bootswatch/dist/zephyr/bootstrap.css
+/node_modules/bootswatch/dist/brite/bootstrap.min.css
+/node_modules/bootswatch/dist/cerulean/bootstrap.min.css
+/node_modules/bootswatch/dist/cosmo/bootstrap.min.css
+/node_modules/bootswatch/dist/cyborg/bootstrap.min.css
+/node_modules/bootswatch/dist/darkly/bootstrap.min.css
+/node_modules/bootswatch/dist/flatly/bootstrap.min.css
+/node_modules/bootswatch/dist/journal/bootstrap.min.css
+/node_modules/bootswatch/dist/litera/bootstrap.min.css
+/node_modules/bootswatch/dist/lumen/bootstrap.min.css
+/node_modules/bootswatch/dist/lux/bootstrap.min.css
+/node_modules/bootswatch/dist/materia/bootstrap.min.css
+/node_modules/bootswatch/dist/minty/bootstrap.min.css
+/node_modules/bootswatch/dist/morph/bootstrap.min.css
+/node_modules/bootswatch/dist/pulse/bootstrap.min.css
+/node_modules/bootswatch/dist/quartz/bootstrap.min.css
+/node_modules/bootswatch/dist/sandstone/bootstrap.min.css
+/node_modules/bootswatch/dist/simplex/bootstrap.min.css
+/node_modules/bootswatch/dist/sketchy/bootstrap.min.css
+/node_modules/bootswatch/dist/slate/bootstrap.min.css
+/node_modules/bootswatch/dist/solar/bootstrap.min.css
+/node_modules/bootswatch/dist/spacelab/bootstrap.min.css
+/node_modules/bootswatch/dist/superhero/bootstrap.min.css
+/node_modules/bootswatch/dist/united/bootstrap.min.css
+/node_modules/bootswatch/dist/vapor/bootstrap.min.css
+/node_modules/bootswatch/dist/yeti/bootstrap.min.css
+/node_modules/bootswatch/dist/zephyr/bootstrap.min.css
+/node_modules/bootswatch/dist/brite/bootstrap.min.css.map
+/node_modules/bootswatch/dist/cerulean/bootstrap.min.css.map
+/node_modules/bootswatch/dist/cosmo/bootstrap.min.css.map
+/node_modules/bootswatch/dist/cyborg/bootstrap.min.css.map
+/node_modules/bootswatch/dist/darkly/bootstrap.min.css.map
+/node_modules/bootswatch/dist/flatly/bootstrap.min.css.map
+/node_modules/bootswatch/dist/journal/bootstrap.min.css.map
+/node_modules/bootswatch/dist/litera/bootstrap.min.css.map
+/node_modules/bootswatch/dist/lumen/bootstrap.min.css.map
+/node_modules/bootswatch/dist/lux/bootstrap.min.css.map
+/node_modules/bootswatch/dist/materia/bootstrap.min.css.map
+/node_modules/bootswatch/dist/minty/bootstrap.min.css.map
+/node_modules/bootswatch/dist/morph/bootstrap.min.css.map
+/node_modules/bootswatch/dist/pulse/bootstrap.min.css.map
+/node_modules/bootswatch/dist/quartz/bootstrap.min.css.map
+/node_modules/bootswatch/dist/sandstone/bootstrap.min.css.map
+/node_modules/bootswatch/dist/simplex/bootstrap.min.css.map
+/node_modules/bootswatch/dist/sketchy/bootstrap.min.css.map
+/node_modules/bootswatch/dist/slate/bootstrap.min.css.map
+/node_modules/bootswatch/dist/solar/bootstrap.min.css.map
+/node_modules/bootswatch/dist/spacelab/bootstrap.min.css.map
+/node_modules/bootswatch/dist/superhero/bootstrap.min.css.map
+/node_modules/bootswatch/dist/united/bootstrap.min.css.map
+/node_modules/bootswatch/dist/vapor/bootstrap.min.css.map
+/node_modules/bootswatch/dist/yeti/bootstrap.min.css.map
+/node_modules/bootswatch/dist/zephyr/bootstrap.min.css.map
+/node_modules/bootswatch/dist/brite/bootstrap.rtl.css
+/node_modules/bootswatch/dist/cerulean/bootstrap.rtl.css
+/node_modules/bootswatch/dist/cosmo/bootstrap.rtl.css
+/node_modules/bootswatch/dist/cyborg/bootstrap.rtl.css
+/node_modules/bootswatch/dist/darkly/bootstrap.rtl.css
+/node_modules/bootswatch/dist/flatly/bootstrap.rtl.css
+/node_modules/bootswatch/dist/journal/bootstrap.rtl.css
+/node_modules/bootswatch/dist/litera/bootstrap.rtl.css
+/node_modules/bootswatch/dist/lumen/bootstrap.rtl.css
+/node_modules/bootswatch/dist/lux/bootstrap.rtl.css
+/node_modules/bootswatch/dist/materia/bootstrap.rtl.css
+/node_modules/bootswatch/dist/minty/bootstrap.rtl.css
+/node_modules/bootswatch/dist/morph/bootstrap.rtl.css
+/node_modules/bootswatch/dist/pulse/bootstrap.rtl.css
+/node_modules/bootswatch/dist/quartz/bootstrap.rtl.css
+/node_modules/bootswatch/dist/sandstone/bootstrap.rtl.css
+/node_modules/bootswatch/dist/simplex/bootstrap.rtl.css
+/node_modules/bootswatch/dist/sketchy/bootstrap.rtl.css
+/node_modules/bootswatch/dist/slate/bootstrap.rtl.css
+/node_modules/bootswatch/dist/solar/bootstrap.rtl.css
+/node_modules/bootswatch/dist/spacelab/bootstrap.rtl.css
+/node_modules/bootswatch/dist/superhero/bootstrap.rtl.css
+/node_modules/bootswatch/dist/united/bootstrap.rtl.css
+/node_modules/bootswatch/dist/vapor/bootstrap.rtl.css
+/node_modules/bootswatch/dist/yeti/bootstrap.rtl.css
+/node_modules/bootswatch/dist/zephyr/bootstrap.rtl.css
+/node_modules/bootswatch/dist/brite/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/cerulean/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/cosmo/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/cyborg/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/darkly/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/flatly/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/journal/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/litera/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/lumen/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/lux/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/materia/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/minty/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/morph/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/pulse/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/quartz/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/sandstone/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/simplex/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/sketchy/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/slate/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/solar/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/spacelab/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/superhero/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/united/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/vapor/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/yeti/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/zephyr/bootstrap.rtl.min.css
+/node_modules/bootswatch/dist/brite/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/cerulean/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/cosmo/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/cyborg/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/darkly/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/flatly/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/journal/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/litera/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/lumen/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/lux/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/materia/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/minty/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/morph/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/pulse/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/quartz/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/sandstone/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/simplex/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/sketchy/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/slate/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/solar/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/spacelab/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/superhero/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/united/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/vapor/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/yeti/bootstrap.rtl.min.css.map
+/node_modules/bootswatch/dist/zephyr/bootstrap.rtl.min.css.map
